--- a/index.html
+++ b/index.html
@@ -15,9 +15,21 @@
     <header> <!-- cabeçalho -->
         <div> logo</div>
 
-        <div> menu </div>
-
+       <!-- Menu Desttop / Mobile  -->
+<nav>
+    <!-- Lista  -->
+     <ul>
+        <li>Home</li>
+        <li>Martelos</li>
+        <li>Chaves de fenda e Phillips</li>
+        <li>Alicates (universal, corte, bico)</li>
+        <li>Trenas</li>
+     </ul>
+</nav>
         <!-- cor do tema -->
     <div> <i class="bi bi-sun"></i> </div>
+    <header> 
+        <!-- Titulo  -->
+         <h1> MAXTORQ </h1>
 </body>
 </html>
